Second project and fix

--- a/src/projects/toggle-password-visibility.njk
+++ b/src/projects/toggle-password-visibility.njk
@@ -8,7 +8,7 @@ templateEngineOverride: njk, md
 
 {% set description %}
 As a basic project, this one was pretty simple. I have already worked a lot with
-this so I did it pretty fast. However, someone in Slack sent an
+these methods so I did it pretty fast. However, someone in Slack sent an
 [article](https://technology.blog.gov.uk/2021/04/19/simple-things-are-complicated-making-a-show-password-option/) 
 I had read before about implementing this password toggle accessibly and 
 progressively enhanced.
@@ -25,6 +25,7 @@ is shown but not the password field itself so that it's not read outloud.
 
 
 {% set html %}
+<p>Enter your username and password to login.</p>
 <form>
     <div>
         <label for="username">Username</label>
