--- a/src/projects/character-count.njk
+++ b/src/projects/character-count.njk
@@ -2,7 +2,7 @@
 title: "Character Count"
 order: 4
 date: 2021-06-07
-methods: ['textContent', 'innerText']
+methods: ['Node.textContent', 'Element.innerText']
 templateEngineOverride: njk, md
 ---
 
