--- a/src/projects/toggle-multiple-passwords.njk
+++ b/src/projects/toggle-multiple-passwords.njk
@@ -2,7 +2,7 @@
 title: "Toggle Multiple Password Fields"
 order: 2
 date: 2021-06-02
-methods: ['querySelectorAll', 'for... of', 'forEach']
+methods: ['document.querySelectorAll()', 'for... of', 'Array.forEach() and Node.forEach()']
 templateEngineOverride: njk, md
 ---
 
