--- a/src/projects/toggle-password-multiple-forms.njk
+++ b/src/projects/toggle-password-multiple-forms.njk
@@ -2,7 +2,7 @@
 title: "Toggle Password Visibility in Multiple Forms"
 order: 3
 date: 2021-06-04
-methods: ['Matches', 'Event delegation', 'data attributes']
+methods: ['Element.matches()', 'Event delegation', 'data attributes']
 templateEngineOverride: njk, md
 ---
 
