--- a/src/projects/toggle-password-visibility.njk
+++ b/src/projects/toggle-password-visibility.njk
@@ -2,7 +2,7 @@
 title: "Toggle Password Visibility"
 order: 1
 date: 2021-05-31
-methods: ['querySelector', 'addEventListener', 'element properties']
+methods: ['document.querySelector()', 'EventTarget.addEventListener()', 'element properties']
 templateEngineOverride: njk, md
 ---
 
