--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -19,7 +19,7 @@
         {{ content | safe }}
     </main>
     <footer>
-        <p>Coded by <a href="https://www.jbbenavidesr.com" target="blank">Juan B Benavides</a></p>
+        <p>Coded by <a href="https://www.jbbenavidesr.com">Juan B Benavides</a></p>
         <a href="/">Project list</a>
     </footer>
 </body>
