Fix a little mistake that accidentally undid

--- a/src/projects/random-ron.njk
+++ b/src/projects/random-ron.njk
@@ -38,7 +38,7 @@ let clickHandler = function (event) {
     // Escape if the event is not the button
     if (!event.target.matches('[data-action]')) return;
 
-    getQuote().then(function(response){
+    getQuote().then(function(quote){
         // Update UI
         quoteContainer.textContent = quote;
     });
