--- a/src/projects/random-ron-async-await.njk
+++ b/src/projects/random-ron-async-await.njk
@@ -86,7 +86,7 @@ to the usual structure that I'm used to for every other function.
 
 However, the idea of adding a 'then' function also makes to this asynchronous and
 directly shows you it goes after. With this structure it is easy to forget something
-is asynchronous and forget the await operator. I actually forgot the `response.jason()`
+is asynchronous and forget the await operator. I actually forgot the `response.json()`
 part was asynchronous and just left it there. It took me some time to realize what
 was happening. 
 
