--- a/src/projects/toggle-password-visibility.njk
+++ b/src/projects/toggle-password-visibility.njk
@@ -48,18 +48,7 @@ is shown but not the password field itself so that it's not read outloud.
 {% endset %}
 
 {% set js %}
-// Selection of DOM elements.
-let pwdInput = document.querySelector('#password');
-let pwdToggle = document.querySelector('#show-password');
-
-// event listeners
-pwdToggle.addEventListener('click', function (event) {
-    if (pwdToggle.checked) {
-        pwdInput.type = 'text';
-    } else {
-        pwdInput.type = 'password';
-    };
-});
+{% include jsFile %}
 {% endset %}
 
 {% include "project.njk" %}
