--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    <header>
-        <h1>{{ title }}</h1>
-        {% if description %}
-        <p>{{ description }}</p>
-        {% endif %}
-    </header>
-    <main>
-        {{ content | safe }}
-    </main>
-    <footer>
-        <p>Coded by <a href="https://www.jbbenavidesr.com">Juan B Benavides</a></p>
-        <a href="/">Project list</a>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{ title }}</title>
+        <!-- capture the CSS content as a Nunjucks variable -->
+        {% set css %}
+        {% include "css/style.css" %}
+        {% endset %}
+        <!-- feed it through our cssmin filter to minify -->
+        <style>
+            {{css | cssmin | safe}}</style>
+    </head>
+    <body>
+        <header>
+            <h1>{{ title }}</h1>
+            {% if description %}
+                <p>{{ description }}</p>
+            {% endif %}
+        </header>
+        <main>
+            {{ content | safe }}
+        </main>
+        <footer>
+            <p>Coded by
+                <a href="https://www.jbbenavidesr.com">Juan B Benavides</a>
+            </p>
+            <a href="/">Project list</a>
+        </footer>
+    </body>
 </html>
