--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -1642,3 +1642,10 @@ body > footer {
 	  text-shadow: none;
 	}
   }
+
+  article {
+    padding: 1em;
+    background: var(--background-alt);
+    margin-bottom: 1em;
+    border-radius: 1em;
+  }
