Dragon Trainer app

--- a/src/_includes/css/style.css
+++ b/src/_includes/css/style.css
@@ -1416,236 +1416,294 @@ body > footer {
 /* PrismJS - used for code highlighting */
 
 [class*="language-"] ::selection {
-	color: #000;
-	background: hsl(214, 100%, 85%);
-	text-shadow: none;
+  color: #000;
+  background: hsl(214, 100%, 85%);
+  text-shadow: none;
+}
+
+pre[class*="language-"] {
+  overflow: auto;
+  margin: 0;
+  background-color: transparent;
+  padding: 0.5em;
+
+  transition: box-shadow 0.3s ease-out;
+}
+
+code[class*="language-"] {
+  font-family: monospace, monospace;
+  text-shadow: 0 1px var(--textShadow);
+  letter-spacing: 0.01em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+
+  /* Safari requirement for contenteditable */
+  word-wrap: normal;
+  line-height: 2;
+  tab-size: 2;
+  hyphens: none;
+}
+
+pre > code[class*="language-"],
+pre[class*="language-"] > code {
+  display: block;
+  padding: 0.75rem;
+
+  /* Use an ellipsis to indicate code is wider than the display area */
+  text-overflow: ellipsis;
+  overflow-x: scroll;
+}
+pre:hover > code[class*="language-"],
+pre:focus-within > code[class*="language-"] {
+  outline: none;
+  text-overflow: inherit;
+}
+
+/* Inline code only */
+:not(pre) > code[class*="language-"] {
+  font-size: inherit;
+  background-position: top right;
+  background-size: auto 4rem;
+  padding: 0.125em 0.25em;
+  white-space: normal;
+  word-wrap: nowrap;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+.token.entity {
+  cursor: help;
+}
+.namespace {
+  opacity: 0.7;
+}
+
+/* Default colors (Light mode) */
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  --color: #33a;
+  --textShadow: #fff;
+  --comment: #7a7a7a;
+  --punctuation: #6e6e6e;
+  --property: #905;
+  --operator: #70b;
+  --selector: #487b00;
+  --url: #8d6640;
+  --urlBg: hsla(0, 0%, 100%, 0.5);
+  --boolean: #905;
+  --atrule: #0075a8;
+  --keyword: #0075a8;
+  --function: #c93654;
+  --regex: #860;
+  --boxShadow: hsla(0, 0%, 0%, 0.3);
+  --focusOutline: hsla(214, 100%, 85%, 1);
+}
+
+/* If the OS has dark mode set then... */
+/* Change dark to light to test */
+
+@media (prefers-color-scheme: dark) {
+  body:not([data-lightMode="light"])
+    code[class*="language-"]:not([contenteditable]),
+  body:not([data-lightMode="light"]) pre[class*="language-"] {
+    --color: #6ae;
+    --textShadow: #000;
+
+    --comment: #9ab;
+    --punctuation: #ccc;
+    --property: #e70;
+    --operator: #d7f;
+    --selector: #8b2;
+    --url: #cde;
+    --urlBg: rgba(0, 0, 0, 0.5);
+    --boolean: #a8f;
+    --atrule: #ffb;
+    --keyword: #fe6;
+    --function: #f55;
+    --regex: #f91;
+
+    --boxShadow: #000;
+    --focusOutline: hsla(214, 100%, 85%, 0.6);
   }
-  
-  pre[class*="language-"] {
-	overflow: auto;
-	margin: 0;
-	background-color: transparent;
-	padding: 0.5em;
-	
-	transition: box-shadow .3s ease-out;
-  }
-  
-  code[class*="language-"] {
-	font-family: monospace, monospace;
-	text-shadow: 0 1px var(--textShadow);
-	letter-spacing: 0.01em;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-  
-	/* Safari requirement for contenteditable */
-	word-wrap: normal;
-	line-height: 2;
-	tab-size: 2;
-	hyphens: none;
-  }
-  
-  pre > code[class*="language-"],
-  pre[class*="language-"] > code {
-	display: block;
-	padding: 0.75rem;
-  
-	/* Use an ellipsis to indicate code is wider than the display area */
-	text-overflow: ellipsis;
-	overflow-x: scroll;
-  }
-  pre:hover > code[class*="language-"],
-  pre:focus-within > code[class*="language-"] {
-	outline: none;
-	text-overflow: inherit;
-  }
-  
-  /* Inline code only */
-  :not(pre) > code[class*="language-"] {
-	font-size: inherit;
-	background-position: top right;
-	background-size: auto 4rem;
-	padding: 0.125em 0.25em;
-	white-space: normal;
-	word-wrap: nowrap;
-  }
-  
-  .token.important,
-  .token.bold {
-	font-weight: bold;
-  }
-  .token.italic {
-	font-style: italic;
-  }
-  .token.entity {
-	cursor: help;
-  }
-  .namespace {
-	opacity: 0.7;
-  }
-  
-  /* Default colors (Light mode) */
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
-	--color: #33a;
-	--textShadow: #fff;
-	--comment: #7a7a7a;
-	--punctuation: #6e6e6e;
-	--property: #905;
-	--operator: #70b;
-	--selector: #487b00;
-	--url: #8d6640;
-	--urlBg: hsla(0, 0%, 100%, .5);
-	--boolean: #905;
-	--atrule: #0075a8;
-	--keyword: #0075a8;
-	--function: #c93654;
-	--regex: #860;
-	--boxShadow: hsla(0,0%,0%,.3);
-	--focusOutline: hsla(214, 100%, 85%, 1);
-	
-  }
-  
-  
-  /* If the OS has dark mode set then... */
-  /* Change dark to light to test */
-  
-  @media (prefers-color-scheme: dark) {
-	body:not([data-lightMode="light"]) code[class*="language-"]:not([contenteditable]),
-	body:not([data-lightMode="light"]) pre[class*="language-"] {
-	  --color: #6ae;
-	  --textShadow: #000;
-  
-	  --comment: #9ab;
-	  --punctuation: #ccc;
-	  --property: #e70;
-	  --operator: #d7f;
-	  --selector: #8b2;
-	  --url: #cde;
-	  --urlBg: rgba(0,0,0,.5);
-	  --boolean: #a8f;
-	  --atrule: #ffb;
-	  --keyword: #fe6;
-	  --function: #f55;
-	  --regex: #f91;
-  
-	  --boxShadow: #000;
-	  --focusOutline: hsla(214, 100%, 85%, .6);
-	}
-  }
-  
-  /* Manual switch mode - where implemented */
-  body[data-lightMode="dark"] code[class*="language-"]:not([contenteditable]),
-  body[data-lightMode="dark"] pre[class*="language-"] {
-  
-	/* Exactly the same as prefers-color-scheme: dark */
-	--color: #6ae;
-	--textShadow: #000;
-  
-	--comment: #9ab;
-	--punctuation: #ccc;
-	--property: #e70;
-	--operator: #d7f;
-	--selector: #8b2;
-	--url: #cde;
-	--urlBg: rgba(0,0,0,.5);
-	--boolean: #8af;
-	--atrule: #ffb;
-	--keyword: #fe6;
-	--function: #f55;
-	--regex: #f91;
-  
-	--boxShadow: #000;
-	--focusOutline: hsla(214, 100%, 85%, .6);
-	
-  }
-  
-  
-  
+}
+
+/* Manual switch mode - where implemented */
+body[data-lightMode="dark"] code[class*="language-"]:not([contenteditable]),
+body[data-lightMode="dark"] pre[class*="language-"] {
+  /* Exactly the same as prefers-color-scheme: dark */
+  --color: #6ae;
+  --textShadow: #000;
+
+  --comment: #9ab;
+  --punctuation: #ccc;
+  --property: #e70;
+  --operator: #d7f;
+  --selector: #8b2;
+  --url: #cde;
+  --urlBg: rgba(0, 0, 0, 0.5);
+  --boolean: #8af;
+  --atrule: #ffb;
+  --keyword: #fe6;
+  --function: #f55;
+  --regex: #f91;
+
+  --boxShadow: #000;
+  --focusOutline: hsla(214, 100%, 85%, 0.6);
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+  color: var(--color);
+  text-shadow: 0 1px var(--textShadow);
+}
+
+/* Background image is applied to the pre element on blocks, mainly because it is cropped when applied to the code element. */
+pre[class*="language-"]:hover,
+pre[class*="language-"]:focus-within {
+  box-shadow: 0 0.25rem 0.25rem var(--boxShadow);
+}
+pre[class*="language-"]:focus-within {
+  outline-offset: calc(-0.25rem - 1px);
+  outline: var(--focusOutline) solid 0.25rem;
+  z-index: 5;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: var(--comment);
+}
+.token.punctuation {
+  color: var(--punctuation);
+}
+.token.property,
+.token.symbol,
+.token.tag,
+.token.constant,
+.token.deleted {
+  color: var(--property);
+}
+.token.boolean,
+.token.number {
+  color: var(--boolean);
+}
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: var(--selector);
+}
+.token.operator {
+  color: var(--operator);
+}
+.token.url,
+.token.entity,
+.language-css .token.string,
+.style .token.string {
+  color: var(--url);
+  background-color: var(--urlBg);
+}
+.token.atrule,
+.token.attr-value {
+  color: var(--atrule);
+}
+.token.keyword {
+  color: var(--keyword);
+}
+.token.function {
+  color: var(--function);
+}
+.token.regex,
+.token.important,
+.token.variable {
+  color: var(--regex);
+}
+
+@media print {
   code[class*="language-"],
   pre[class*="language-"] {
-	color: var(--color);
-	text-shadow: 0 1px var(--textShadow);
+    text-shadow: none;
   }
-  
-  /* Background image is applied to the pre element on blocks, mainly because it is cropped when applied to the code element. */
-  pre[class*="language-"]:hover,
-  pre[class*="language-"]:focus-within {
-	box-shadow: 0 .25rem .25rem var(--boxShadow);
-  }
-  pre[class*="language-"]:focus-within {
-	outline-offset: calc(-0.25rem - 1px);
-	outline: var(--focusOutline) solid 0.25rem;
-	z-index: 5;
-  }
-  
-  .token.comment,
-  .token.prolog,
-  .token.doctype,
-  .token.cdata {
-	color: var(--comment);
-  }
-  .token.punctuation {
-	color: var(--punctuation);
-  }
-  .token.property,
-  .token.symbol,
-  .token.tag,
-  .token.constant,
-  .token.deleted {
-	color: var(--property);
-  }
-  .token.boolean,
-  .token.number {
-	color: var(--boolean);
-  }
-  .token.selector,
-  .token.attr-name,
-  .token.string,
-  .token.char,
-  .token.builtin,
-  .token.inserted {
-	color: var(--selector);
-  }
-  .token.operator {
-	color: var(--operator);
-  }
-  .token.url,
-  .token.entity,
-  .language-css .token.string,
-  .style .token.string {
-	color: var(--url);
-	background-color: var(--urlBg);
-  }
-  .token.atrule,
-  .token.attr-value {
-	color: var(--atrule);
-  }
-  .token.keyword {
-	color: var(--keyword);
-  }
-  .token.function {
-	color: var(--function);
-  }
-  .token.regex,
-  .token.important,
-  .token.variable {
-	color: var(--regex);
-  }
-  
-  
-  
-  @media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-	  text-shadow: none;
-	}
-  }
+}
 
-  article {
-    padding: 1em;
-    background: var(--background-alt);
-    margin-bottom: 1em;
-    border-radius: 1em;
-  }
+/* ----- Specific markup for projects -----*/
+
+
+.project-12 article {
+  padding: 1em;
+  background: var(--background-alt);
+  margin-bottom: 1em;
+  border-radius: 1em;
+}
+
+.project-13 > header {
+  text-align: center;
+  padding: 2em 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.project-13 nav ul {
+  list-style: none;
+  padding: 0;
+  max-width: 40ch;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+  justify-content: space-evenly;
+}
+
+.project-13 nav a {
+  color: var(--text-muted);
+}
+
+.project-13 [data-app="wrapper"] > section {
+  display: none;
+}
+
+.project-13 .home #home {
+  display: block;
+}
+
+.project-13 .archive #archive {
+  display: block;
+}
+
+.project-13 .authors #authors {
+  display: block;
+}
+
+.project-13 .article-detail #article-detail {
+  display: block;
+}
+
+.project-13 .author-detail #author-detail {
+  display: block;
+}
+
+.project-13 article {
+  padding: 1em;
+  background: var(--background-alt);
+  margin-bottom: 1em;
+  border-radius: 1em;
+}
+
+.project-13 .archive ul,
+.project-13 .authors ul {
+  list-style: none;
+  padding: 0;
+}
