--- a/src/_includes/project.njk
+++ b/src/_includes/project.njk
@@ -5,9 +5,9 @@
 {% endif %}
 
 
-<div class="project-{{ order }}">
+<section class="project-{{ order }}">
 {{ html | safe }}
-</div>
+</section>
 
 {% if not hideTopics %}
 <h2>Topics for this lesson:</h2>
