--- a/src/projects/monster-shuffle.njk
+++ b/src/projects/monster-shuffle.njk
@@ -16,6 +16,14 @@ templateEngineOverride: njk, md
 {% endset %}
 
 {% set description %}
+I'm pretty excited with the project of this week. It's a simple but fun game.
+
+For this one I tried to first do it by appending an inline svg for the icons. I stored the icon's code
+to the monster array, but then it wasn't that simple to implement the alt text so I
+decided to use the img as usual and linked the image to the link of the github gist
+so I didn't have to download each image.
+
+For the Grid, I'm using the auto-grid utility from [Andy Bell](https://piccalil.li).
 {% endset %}
 
 
