--- a/src/projects/weather-library.njk
+++ b/src/projects/weather-library.njk
@@ -20,6 +20,9 @@ I basically tried to do a wrapper that would work with this API so it is a libra
 where the user provides the API key and the library handles the fetch and updates the
 UI by using an element with `data-weather` attribute. I think it's nice for it to be
 my first approach to libraries. I also tried to make clear documentation and comments.
+
+I have no idea how could this work in production given that the UI cannot be updated
+from the middle man, I would have to split things between middle man and client side.
 {% endset %}
 
 
