Fix: I stamp is not internal

--- a/src/projects/timestamp-read-only.njk
+++ b/src/projects/timestamp-read-only.njk
@@ -20,6 +20,8 @@ What is the approach for having private methods?
 In my library I have the method addTime that is then used by all the other
 methods of date arithmetic. It is meant to be private, but it isn't. Don't know
 how can it be private. I did put an underscore to the name.
+
+UPDATE: I did fall again in the issue and marked the stamp as an internal property.
 {% endset %}
 
 {% include "project.njk" %}
