--- a/src/projects/dice-options.njk
+++ b/src/projects/dice-options.njk
@@ -17,6 +17,11 @@ templateEngineOverride: njk, md
 {% endset %}
 
 {% set description %}
+So, the first thing I did was to update the shuffling function based on what I 
+talked with Chris over at Slack. 
+
+I struggled a little on deciding which things should be settings and which ones not.
+I left it in the way that made more sense to me.
 {% endset %}
 
 {% include "project.njk" %}
