FIX: fix parsing of numbers to be float.

--- a/src/projects/jan2022/weight-conversion-library.njk
+++ b/src/projects/jan2022/weight-conversion-library.njk
@@ -43,6 +43,9 @@ object.
 
 I had some time to work out a very simple UI that let's me play with the different
 possibilities of conversion.
+
+Checking the solution I realized I messed it up using `parseInt` instead of `parseFloat`
+it is now correct.
 {% endset %}
 
 
